knowledge_base/knowledge/v15/capl/structured/Obsolete/EthGetThisValue32.md
# EthGetThisValue32

> Category: `Obsolete` | Type: `notes`

## Description

See Also

| Deprecated Function Replaced by: ethernetPacket.DWord |  |  |  |  |
|---|---|---|---|---|
| Function Syntax | long EthGetThisValue32( long offset ); |  |  |  |
| Function | This function reads the data of a received packet in Intel format. It is only usable in a CAPL callback function that had been registered with EthReceiveRawPacket or EthReceivePacket. It depends on the callback function, which part of the packet data is accessed by the function: Callback of EthReceiveRawPacket: The function handles the raw Ethernet packet data. The offset 0 is the beginning of the Ethernet packet. Callback of EthReceivePacket: The function handles the payload data of the highest interpretable protocol, i.e. in an UDP packet the functions handles the payload data of the UDP protocol. |  |  |  |
| Parameters | offset byte offset relative to the beginning of a data packet or the payload (see description above) |  |  |  |
| Return Values | read value |  |  |  |
| Availability | Up to Version | Restricted To | Measurement Setup | Simulation/Test Setup |
| 7.2-12.0 | Ethernet | — | • |  |
| Example Node System - PreStart in CAPL Browser on preStart{ EthReceiveRawPacket( "OnEthRawPacket");} Node Callback Function in CAPL Browser void OnEthRawPacket( LONG channel, LONG dir, LONG packetLength ){ BYTE rx_data[100]; LONG rx_length: LONG val; // get the payload of the packet rx_length = EthGetThisData( 0, elCount(rx_data), rx_data ); // get 32-bit integer value at offset 0 of the payload val = EthGetThisValue32( 0 );} |  |  |  |  |

| Version 15© Vector Informatik GmbH |
|---|
